--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,30 @@ ul {
 .countdown-hours {
 
 }
+
+
+#newBottleModal {
+	position: absolute;
+	display: block;
+	width: 450px;
+	height: 240px;
+	padding: 24px;
+	background-color: #f4f4f4;
+	text-align: center;
+	top: 120px;
+	left: calc(50vw - 225px);
+	box-shadow: -3px 3px 6px 1px #5c5c5c;
+}
+span#closeNewBottleModal {
+	position: absolute;
+	top: -30px;
+	right: -30px;
+	height: 60px;
+	width: 60px;
+	font-size: 55px;
+	text-align: center;
+	line-height: 60px;
+	font-family: consolas;
+	font-stretch: expanded;
+
+}
